--- a/1.0-alpine-default-venv/Dockerfile
+++ b/1.0-alpine-default-venv/Dockerfile
@@ -7,8 +7,8 @@ RUN apk -U add \
         musl-dev \
         openssl-dev \
         python-dev \
-        py-imaging \
         py-pip \
         curl ca-certificates \
     && update-ca-certificates \
-    && rm -rf /var/cache/apk/*
+    && rm -rf /var/cache/apk/* \
+    && pip install --no-cache-dir virtualenv
